--- a/index.css
+++ b/index.css
@@ -167,6 +167,8 @@ a:hover {
 }
 
 #tech>div:hover {
+   /* transform: translate(0px,-20px); */
+   transform: scale(0.75);
     cursor: pointer;
     color: white;
     background: orange;
@@ -234,6 +236,7 @@ a:hover {
 }
 
 #skill1>div:hover {
+    transform: translate(0px,-30px);
     cursor: pointer;
     background-color: orange;
 }
@@ -593,6 +596,7 @@ svg.js-calendar-graph-svg {
     }
 
     #tech>div:hover {
+        transform: scale(0.75);
         cursor: pointer;
         color: white;
         background: orange;
@@ -660,6 +664,7 @@ svg.js-calendar-graph-svg {
     }
 
     #skill1>div:hover {
+        transform: translate(0px,-30px);
         cursor: pointer;
         background-color: orange;
     }
@@ -980,6 +985,7 @@ svg.js-calendar-graph-svg {
     }
 
     #tech>div:hover {
+        transform: scale(0.75);
         cursor: pointer;
         color: white;
         background: orange;
@@ -1048,6 +1054,7 @@ svg.js-calendar-graph-svg {
     }
 
     #skill1>div:hover {
+        transform: translate(0px,-30px);
         cursor: pointer;
         background-color: orange;
     }
